umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_openbabel_culgi_00.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 34
bond_count: 36
sum_formula: C17H13O4-1
graph6: "ahCGGG@?G?_@?P??`?I?@??C?C???G??E???_??C???C???C????G???A????O????A????G????O????G????C?????_??"
