umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_openbabel_culgi_02.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 33
bond_count: 33
sum_formula: C12H19IN+1
graph6: "`gCO_C@?G?_@?P?AO?C??_?@??@??@???_??@???G???_???_???_???C????_???@????A??A_????????C????A"
