umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_openbabel_mol24.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 41
bond_count: 43
sum_formula: C17H18N2O3S
graph6: "hhCGGG@???_H?@?A??G?`??G??G??G??G?@@??@?@??O???_???_???A????_?????_???A?????O????O????@?????O????@?????C?????C?????A?????@??????O???K?????"
